--- a/AssemblyBrowser/AssemblyBrowser.csproj
+++ b/AssemblyBrowser/AssemblyBrowser.csproj
@@ -63,7 +63,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FieldConverter.cs" />
     <Compile Include="Model.cs" />
+    <Compile Include="PropertyConverter.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="Viewmodel.cs" />
     <Page Include="MainWindow.xaml">
